--- a/scribbles/quantifiers.html
+++ b/scribbles/quantifiers.html
@@ -1,6 +1,9 @@
 <html lang="en"><head><link rel="stylesheet" href="../tufte.css" />
 <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
-<script id="MathJax-script" async="" src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script></head>
+<script id="MathJax-script" async="" src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+<link rel="stylesheet" href="../highlight/styles/a11y-light.css" />
+<script src="../highlight/highlight.pack.js"></script>
+<script>hljs.highlightAll();</script></head>
 <body><article><h1>Simulations and Commuting Quantifiers</h1>
 <h3>March, 2021</h3>
 <section><p><span class="newthought">How sloppy can we be with Math</span> and still be right? Amin Timany recently wrote an interesting <a href="https://tildeweb.au.dk/au571806/blog/commuting_quantifiers/">blog post</a>
@@ -58,9 +61,71 @@ For example, the sequence \( [Init, C_1, A_2, Abort] \) is simulated by \( [Init
 $$ \le = \bigcap_{i \ge 0} \le_i $$
 If so, we could compute \( \le_0, \le_1, \ldots, \le_n, \ldots \)
 Since \( F \) is monotone, then we can stop computing as soon as we reach a fixpoint \( \le_n = F(\le_{n}) = \le_{n + 1} \). In that case
-$$  \le = \bigcap_{i \ge 0} \le_i = \le_n $$
-The fixpoint algorithm can be implemented more or less verbatim (<a href="simil-src.html">Scala source</a>).
-For the 2PC models above, we indeed get that \( Init \le Init' \) as expected.
+$$  \le = \bigcap_{i \ge 0} \le_i = \le_n $$</p></section>
+<section> <p>  <span class="newthought">The fixpoint algorithm</span> can be implemented more or less verbatim (below in Scala, full source <a href="simil-src.html">here</a>):
+
+<pre><code class="scala">// Compute the similarity relation on nodes of a
+// labelled-transition system (LTS) via fixpoints.
+
+object Trans {
+  // LTS processes and actions
+  type Procc = String
+  type Act = Int
+
+  // A labelled-transition system is a set of processes (nodes)
+  // and transitions between them.
+  case class LTS(
+    procc: Set[Procc],
+    trans: Map[Procc, List[(Act, Procc)]])
+
+  // A relation is a set of pairs of processes.
+  type Rel = Set[(Procc, Procc)]
+}
+
+import Trans._
+
+class Simil(L1: LTS, L2: LTS) {
+  // The _functional_ computes the pairs (p, q) where
+  // q simulates p for one step and we end up in elements
+  // in R.
+  def funct(R : Rel): Rel = {
+    for {
+      s1 &lt;- L1.procc
+      s2 &lt;- L2.procc
+      if L1.trans.getOrElse(s1, List()).forall(
+        { case (a1, p1) =&gt;
+          // s1 -&gt;_a1 p1
+          L2.trans.getOrElse(s2, List()).exists(
+            { case (a2, p2) =&gt;
+              // s2 -&gt;_a2 p2
+              a2 == a1 &amp;&amp; R.contains(p1, p2)  })
+        })
+    } yield (s1, s2)
+  }
+
+  // Compute the fixpoint of a function f from the sequence
+  // [R, f(R), f(f(R)), ...]
+  @tailrec
+  private def fixpoint(R : Rel, f : Rel =&gt; Rel): Rel = {
+    val next = f(R)
+    if (next == R) R else fixpoint(next, f)
+  }
+
+  // Compute the similarity relation between processes in
+  // two LTSs (i.e. which processes in the second LTS simulate
+  // the ones in the first).
+  val simil: Rel = {
+    // Initially, consider all pairs of processes.
+    var R0: Rel = for {
+      p1 &lt;- L1.procc
+      p2 &lt;- L2.procc
+    } yield (p1, p2)
+    // Now iterate until we reach a fixpoint.
+    fixpoint(R0, funct)
+  }
+}</code></pre></p>
+
+<p>For the 2PC models above, we indeed get that \( Init \le Init' \) as expected.
 <label for="sn-sim" class="margin-toggle sidenote-number"></label>
 <input type="checkbox" id="sn-sim" class="margin-toggle" />
 <span class="sidenote">The full relation is
@@ -83,8 +148,8 @@ Commit ≤ Commit',
 Commit ≤ Init',
 Commit ≤ Procc,
 Init ≤ Init',
-Init ≤ Procc }</span></p>
-<p>Unfortunately the method above doesn't always work. In the example below, \( A \) we can take \( n \) a-steps <i>for any</i> \( n \),
+Init ≤ Procc }</span></p></section>
+<section><p><span class="newthought">Unfortunately the method above</span> doesn't always work. In the example below, \( A \) we can take \( n \) a-steps <i>for any</i> \( n \),
 so \( C \le_n A \) and \( (C, A) \in \bigcap_{ i \ge 0} \le_i \). However, <i>\( A \) cannot simulate \( C \)</i>I because \( C \) can take infinitely many steps whereas \( A \) needs to &quot;commit&quot; to
 one of the \( B_i \), and from then on it can only take a finite number of steps. </p>
 <img src="sim-inf.png" style="height:200px" float="left" />
