--- a/scribbles/quantifiers.html
+++ b/scribbles/quantifiers.html
@@ -45,8 +45,8 @@ while keeping track of which clients have committed (C) or aborted (A). The tran
 <img src="2pc-simple.png" style="height:200px" />
 <p>We then need a way to relate the two models: we can use similarity to that effect. We can see that \( Init \le Init' \), all the C and A states are simulated by Procc, \( Commit \le Commit' \), and \( Abort \le Abort' \).
 For example, the sequence \( [Init, C_1, A_2, Abort] \) is simulated by \( [Init', Procc, Procc, Abort'] \).</p></section>
-<section><p><span class="newthought">Working in the complete</span> <i>powerset lattice</i> \( \mathcal{P}(Procc \times Procc) \), we can obtain similarity as the greatest <i>fixpoint</i> of a <i>functional</i>
-\( F : \mathcal{P}({Procc \times Procc}) \rightarrow \mathcal{P}({Procc \times Procc}) \) given by
+<section><p><span class="newthought">Working in the complete</span> <i>powerset lattice</i> \( \mathcal{P}(Pr \times Pr) \), we can obtain similarity as the greatest <i>fixpoint</i> of a <i>functional</i>
+\( F : \mathcal{P}({Pr \times Pr}) \rightarrow \mathcal{P}({Pr \times Pr}) \) given by
 <label for="sn-demo" class="margin-toggle sidenote-number"></label>
 <input type="checkbox" id="sn-demo" class="margin-toggle" />
 <span class="sidenote">The intuition for \( F(R) \) is that it gives us all pairs  \( (P, Q) \) where \( Q \) can simulate  \( P \) <i>for one step</i> and after that one step <i>we end up in a pair of states in \( R \). </i> </span>
@@ -60,8 +60,23 @@ For example, the sequence \( [Init, C_1, A_2, Abort] \) is simulated by \( [Init
 <p>To compute similarity, we'd like to know that \( P \le Q \) iff  \( P \le_n Q \) <i>for all n</i>; i.e.
 $$ \le = \bigcap_{i \ge 0} \le_i $$
 If so, we could compute \( \le_0, \le_1, \ldots, \le_n, \ldots \)
-Since \( F \) is monotone, then we can stop computing as soon as we reach a fixpoint \( \le_n = F(\le_{n}) = \le_{n + 1} \). In that case
-$$  \le = \bigcap_{i \ge 0} \le_i = \le_n $$</p></section>
+Since \( F \) is monotone, then we can stop computing as soon as we reach a fixpoint \( \le_n = F(\le_{n}) = \le_{n + 1} \), In that case
+$$  \le = \bigcap_{i \ge 0} \le_i = \le_n $$
+This is justified by the following lemma:</p>
+<p><u><b>Lemma 3.</b></u> For \( i \ge 0 \), if \( P \le_{i + 1} Q \), then \( P \le_i Q \).</p>
+<p><b><u>Proof.</u></b> Intuitively, this makes sense. If \( Q \) can simulate \( P \) for \( i + 1 \) steps, then surely it can also simulate it
+for \( i \) steps. Formally, we have to show that \( \le_{i + 1} \subseteq \le_i \).
+Note that
+$$ \le_1 \subseteq Pr \times \Pr = \le_0 $$
+Since \( F \) is monotone we can (repeatedly) apply it on both sides to get
+$$ \begin{align}
+   \le_2 = F(\le_1) \subseteq F(\le_0) = \le_1 \\
+   \le_3 = F(\le_2) \subseteq F(\le_1) = \le_2 \\
+   \ldots
+   \end{align}
+$$
+The proof follows by induction. \( \blacksquare \)</p>
+<p><u><b>Corollary 4.</b></u> If \( n \ge m \), then \( P \le_n Q \) implies \( P \le_m Q \).</p></section>
 <section> <p>  <span class="newthought">The fixpoint algorithm</span> can be implemented more or less verbatim (below in Scala, full source <a href="simil-src.html">here</a>):
 
 <pre><code class="scala">// Compute the similarity relation on nodes of a
@@ -140,7 +155,7 @@ Abort ≤ Procc,
 C1 ≤ Init',
 C1 ≤ Procc,
 C12 ≤ Init',
-C12 ≤ Procc,
+C12 ≤ W,
 C2 ≤ Init',
 C2 ≤ Procc,
 Commit ≤ Abort',
@@ -174,9 +189,9 @@ But we need
 $$ \exists Q'. \forall i. Q \rightarrow_\mu Q' \land (P', Q') \in \le_i $$
 Of course, we know we can't simply swap the quantifiers, which is consistent with the counterexample we saw above.
 In the counterexample, process \( A \) had infinitely-many outgoing transitions, so one (not very intuitive) question to ask is whether restricting the LTS to being <i>finitely branching</i> solves the problem (it does).</p>
-<p><u><b>Definition 3.</b></u> An LTS is finitely branching if for every process \( P \) the set \( \{ (\mu, Q) | P \rightarrow_\mu Q \in \rightarrow \} \) is finite.</p>
+<p><u><b>Definition 5.</b></u> An LTS is finitely branching if for every process \( P \) the set \( \{ (\mu, Q) | P \rightarrow_\mu Q \in \rightarrow \} \) is finite.</p>
 <p>We now finally get to the meat of the matter: if the LTS is finitely branching, then we can exchange the quantifiers.</p>
-<p><u><b>Lemma 4.</b></u> If the underlying LTS is finitely branching, then
+<p><u><b>Lemma 6.</b></u> If the underlying LTS is finitely branching, then
 $$ \forall i. \exists Q'. Q \rightarrow_\mu Q' \land (P', Q') \in \le_i $$
 implies
 $$ \exists Q'. \forall i. Q \rightarrow_\mu Q' \land (P', Q') \in \le_i $$
@@ -196,12 +211,12 @@ $$ Q \rightarrow_\mu Q' \land (P', Q') \in \le_i $$
 Since \( i \) was arbitrarily chosen, we get
 $$ \forall i, Q \rightarrow_\mu Q' \land (P', Q') \in \le_i $$
 which is allows us to instantiate the existential in our goal. \( \blacksquare \)</p></section>
-<section><p><span class="newthought">The abstract view</span> of Lemma 4 above is given in Theorem 1 (Regular Quantification) of <a href="https://tildeweb.au.dk/au571806/blog/commuting_quantifiers/">Amin's blog post</a>:
+<section><p><span class="newthought">The abstract view</span> of Lemma 6 above is given in Theorem 1 (Regular Quantification) of <a href="https://tildeweb.au.dk/au571806/blog/commuting_quantifiers/">Amin's blog post</a>:
 <blockquote><p>Let A be a regular ordinal, [...] and B be a set with strictly smaller cardinality [...].
 The following holds for any \( P \) that is downwards closed with respect to the
 relation on A:
 $$ (\forall x \in A. \exists y \in B. P(x, y) ) \implies \exists y \in B. \forall x \in A. P(x, y) $$</p></blockquote></p>
-<p>Contrast with a version of Lemma 4 massaged to highlight the parallels
+<p>Contrast with a version of Lemma 6 massaged to highlight the parallels
 $$ ( \forall i \in \mathbb{N}. \exists Q' \in succ(Q, \mu). \mathcal{S}(i, Q') ) \implies  \exists Q' \in succ(Q, \mu). \forall i \in \mathbb{N}. \mathcal{S}(i, Q') $$
 where
 $$ \begin{align}
@@ -222,10 +237,7 @@ $$</p>
 <input type="checkbox" id="sn-closed" class="margin-toggle" />
 <span class="sidenote">This means that \( n \ge m \land \mathcal{S}(n, Q') \implies \mathcal{S}(m, Q') \) </span></i>. Here we need to show that if \( n \ge m \) then
 $$ P' \le_n Q' \implies P' \le_m Q' $$
-That is, if \( Q' \) can simulate \( P' \) for \( n \) steps, then it can simulate it for \( m \) steps.
-This makes intuitive sense, and follows from the fact that the functional \( F \) used to generate \( \le_n \) is monotone.
-Indeed, note that \( \le_1 \subseteq \le_0 = Pr \times \Pr \), and applying \( F \) on both sides we get \( \le_2 = F(\le_1) \subseteq F(\le_0) = \le_1 \).
-The proof follows by induction. \( \blacksquare \)</li></ul></p></section>
+This is precisely the previously shown Corollary 5. \( \blacksquare \)</li></ul></p></section>
 <section><h2>References</h2>
 <ul><li>Sangiorgi, Davide. Introduction to Bisimulation and Coinduction. Cambridge University Press, 2011.</li>
 <li>Timany, Amin. Commuting Quantifiers. <a href="https://tildeweb.au.dk/au571806/blog/commuting_quantifiers/">https://tildeweb.au.dk/au571806/blog/commuting_quantifiers/</a>.</li>
