--- a/scribbles/quantifiers.html
+++ b/scribbles/quantifiers.html
@@ -51,9 +51,12 @@ For example, the sequence \( [Init, C_1, A_2, Abort] \) is simulated by \( [Init
 <input type="checkbox" id="sn-demo" class="margin-toggle" />
 <span class="sidenote">The intuition for \( F(R) \) is that it gives us all pairs  \( (P, Q) \) where \( Q \) can simulate  \( P \) <i>for one step</i> and after that one step <i>we end up in a pair of states in \( R \). </i> </span>
 \[ F(R) = \{ (P, Q) | \forall P', P \rightarrow_\mu P' \implies \exists Q'. Q \rightarrow_\mu Q' \land (P', Q') \in R \} \]
-<p><u><b>Fact 1.</b></u> \( R \) is a simulation iff \( R \) is a post-fixpoint of \( F \) (i.e. \( R \subseteq F(R) \) ).
-<br />
-<u><b>Corollary 2.</b></u> similarity is  F's greatest fixpoint (follows by <a href="https://en.wikipedia.org/wiki/Knaster%E2%80%93Tarski_theorem">Knaster-Tarski</a>).</p></p>
+<p><u><b>Fact 1.</b></u> \( F \) is <i>monotone</i>.
+<label for="sn-mono" class="margin-toggle sidenote-number"></label>
+<input type="checkbox" id="sn-mono" class="margin-toggle" />
+<span class="sidenote">This means that if \( S \subseteq R \) then \( F(S) \subseteq F(R) \). </span></p>
+<p><u><b>Fact 2.</b></u> \( R \) is a simulation iff \( R \) is a post-fixpoint of \( F \) (i.e. \( R \subseteq F(R) \) ).</p>
+<p><u><b>Corollary 3.</b></u> similarity is  F's greatest fixpoint (follows by <a href="https://en.wikipedia.org/wiki/Knaster%E2%80%93Tarski_theorem">Knaster-Tarski</a>).</p></p>
 <p>Moreover, we can stratify similarity through a family of relations \( \{ \le_n \} \) capturing <i>similarity up to \(n\) steps</i>:
 <ul><li>\( \le_0 = Pr \times Pr \)</li>
 <li> \( \le_{n + 1} = F(\le_n) \)</li></ul></p>
@@ -63,7 +66,7 @@ If so, we could compute \( \le_0, \le_1, \ldots, \le_n, \ldots \)
 Since \( F \) is monotone, then we can stop computing as soon as we reach a fixpoint \( \le_n = F(\le_{n}) = \le_{n + 1} \), In that case
 $$  \le = \bigcap_{i \ge 0} \le_i = \le_n $$
 This is justified by the following lemma:</p>
-<p><u><b>Lemma 3.</b></u> For \( i \ge 0 \), if \( P \le_{i + 1} Q \), then \( P \le_i Q \).</p>
+<p><u><b>Lemma 4.</b></u> For \( i \ge 0 \), if \( P \le_{i + 1} Q \), then \( P \le_i Q \).</p>
 <p><b><u>Proof.</u></b> Intuitively, this makes sense. If \( Q \) can simulate \( P \) for \( i + 1 \) steps, then surely it can also simulate it
 for \( i \) steps. Formally, we have to show that \( \le_{i + 1} \subseteq \le_i \).
 Note that
@@ -76,7 +79,7 @@ $$ \begin{align}
    \end{align}
 $$
 The proof follows by induction. \( \blacksquare \)</p>
-<p><u><b>Corollary 4.</b></u> If \( n \ge m \), then \( P \le_n Q \) implies \( P \le_m Q \).</p></section>
+<p><u><b>Corollary 5.</b></u> If \( n \ge m \), then \( P \le_n Q \) implies \( P \le_m Q \).</p></section>
 <section> <p>  <span class="newthought">The fixpoint algorithm</span> can be implemented more or less verbatim (below in Scala, full source <a href="simil-src.html">here</a>):
 
 <pre><code class="scala">// Compute the similarity relation on nodes of a
@@ -189,9 +192,9 @@ But we need
 $$ \exists Q'. \forall i. Q \rightarrow_\mu Q' \land (P', Q') \in \le_i $$
 Of course, we know we can't simply swap the quantifiers, which is consistent with the counterexample we saw above.
 In the counterexample, process \( A \) had infinitely-many outgoing transitions, so one (not very intuitive) question to ask is whether restricting the LTS to being <i>finitely branching</i> solves the problem (it does).</p>
-<p><u><b>Definition 5.</b></u> An LTS is finitely branching if for every process \( P \) the set \( \{ (\mu, Q) | P \rightarrow_\mu Q \in \rightarrow \} \) is finite.</p>
+<p><u><b>Definition 6.</b></u> An LTS is finitely branching if for every process \( P \) the set \( \{ (\mu, Q) | P \rightarrow_\mu Q \in \rightarrow \} \) is finite.</p>
 <p>We now finally get to the meat of the matter: if the LTS is finitely branching, then we can exchange the quantifiers.</p>
-<p><u><b>Lemma 6.</b></u> If the underlying LTS is finitely branching, then
+<p><u><b>Lemma 7.</b></u> If the underlying LTS is finitely branching, then
 $$ \forall i. \exists Q'. Q \rightarrow_\mu Q' \land (P', Q') \in \le_i $$
 implies
 $$ \exists Q'. \forall i. Q \rightarrow_\mu Q' \land (P', Q') \in \le_i $$
@@ -232,10 +235,7 @@ $$</p>
  we are given \( f(n - 1) \) and have to define \( f(n) \). Since \( S \) is unbounded, there's an element \( e \in S \) such that \( e &gt; f(n - 1) \). We set \( f(n) = e \).
  It's easy to see that if \( n &lt; m \) then \( f(n) &lt; f(m) \); this means \( f \) is injective as needed. \( \blacksquare \)</li>
 <li> <i>\( succ(Q, \mu) \) must have strictly smaller cardinality than  \( \mathbb{N} \)</i>. This is easy, because since the LTS is finitely branching \( succ(Q, \mu) \) must be finite, and \( \mathbb{N} \) is infinite.  \( \blacksquare \)</li>
-<li> <i>\( \mathcal{S}(i, Q') \) is <i>downwards-closed</i>
-<label for="sn-closed" class="margin-toggle sidenote-number"></label>
-<input type="checkbox" id="sn-closed" class="margin-toggle" />
-<span class="sidenote">This means that \( n \ge m \land \mathcal{S}(n, Q') \implies \mathcal{S}(m, Q') \) </span></i>. Here we need to show that if \( n \ge m \) then
+<li> <i>\( \mathcal{S}(i, Q') \) is downwards-closed</i>. Here we need to show that if \( n \ge m \) then
 $$ P' \le_n Q' \implies P' \le_m Q' $$
 This is precisely the previously shown Corollary 5. \( \blacksquare \)</li></ul></p></section>
 <section><h2>References</h2>
