--- a/index.html
+++ b/index.html
@@ -48,6 +48,6 @@ Léon Gondelman, Simon Oddershede Gregersen, <em>Abel Nieto</em>, Amin Timany, L
 <ol><li><b>Scala with Explicit Nulls</b> <span>|<a href="https://uwspace.uwaterloo.ca/handle/10012/15364">.pdf</a></span>
 <br />
 <small><span style="color:gray">master thesis, University of Waterloo, 2019</span></small></li></ol></section>
-<section><h2>Scribbles</h2>
+<section><h2>Memos</h2>
 <ul><li><a href="scribbles/free-theorem.html">A Free Theorem</a> <small><span style="color:gray">(08/20)</span></small></li>
 <li><a href="scribbles/quantifiers.html">Simulations and Commuting Quantifiers</a> <small><span style="color:gray">(03/21)</span></small></li></ul></section></article></body></html>
