--- a/scribbles/quantifiers.html
+++ b/scribbles/quantifiers.html
@@ -167,7 +167,7 @@ Commit ≤ Init',
 Commit ≤ Procc,
 Init ≤ Init',
 Init ≤ Procc }</span></p></section>
-<section><p><span class="newthought">Unfortunately the method above</span> doesn't always work. In the example below, \( A \) we can take \( n \) a-steps <i>for any</i> \( n \),
+<section><p><span class="newthought">Unfortunately the method above</span> doesn't always work. In the example below, \( A \) can take \( n \) a-steps <i>for any</i> \( n \),
 so \( C \le_n A \) and \( (C, A) \in \bigcap_{ i \ge 0} \le_i \). However, <i>\( A \) cannot simulate \( C \)</i> because \( C \) can take infinitely many steps whereas \( A \) needs to &quot;commit&quot; to
 one of the \( B_i \), and from then on it can only take a finite number of steps. </p>
 <img src="sim-inf.png" style="height:200px" float="left" />
