least fixpoints memo

--- a/index.html
+++ b/index.html
@@ -50,4 +50,5 @@ Léon Gondelman, Simon Oddershede Gregersen, <em>Abel Nieto</em>, Amin Timany, L
 <small><span style="color:gray">master thesis, University of Waterloo, 2019</span></small></li></ol></section>
 <section><h2>Memos</h2>
 <ul><li><a href="scribbles/free-theorem.html">A Free Theorem</a> <small><span style="color:gray">(08/20)</span></small></li>
-<li><a href="scribbles/quantifiers.html">Simulations and Commuting Quantifiers</a> <small><span style="color:gray">(03/21)</span></small></li></ul></section></article></body></html>
+<li><a href="scribbles/quantifiers.html">Simulations and Commuting Quantifiers</a> <small><span style="color:gray">(03/21)</span></small></li>
+<li><a href="scribbles/least-fp.html">Why Least Fixpoints</a> <small><span style="color:gray">(04/21)</span></small></li></ul></section></article></body></html>
